<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="24dp"
    tools:context=".presentation.converter.ConverterActivity"
    tools:ignore="LabelFor">

    <com.practicum.currencyconverter.ui.views.AutoResizeEditText
        android:id="@+id/fromInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="end"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="19"
        android:maxLines="1"
        android:textAppearance="@style/Text.Regular.40"
        android:textDirection="ltr"
        app:layout_constraintBottom_toBottomOf="@id/fromBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fromCurrencyIconImageView"
        app:layout_constraintTop_toTopOf="@id/fromBackground"
        tools:text="1" />

    <ImageButton
        android:id="@+id/refreshButton"
        android:layout_width="84dp"
        android:layout_height="44dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_blue_button"
        android:contentDescription="@string/converter_refresh_button_content_description"
        android:src="@drawable/ic_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currencyCourseTextView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/toCurrencyIconImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/converter_to_currency_icon_content_description"
        android:src="@drawable/ic_russia"
        app:fabCustomSize="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toBackground"
        app:maxImageSize="48dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fromCurrencyIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/converter_from_currency_icon_content_description"
        android:src="@drawable/ic_usa"
        app:fabCustomSize="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fromBackground"
        app:maxImageSize="48dp" />

    <TextView
        android:id="@+id/toResultTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="16dp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:gravity="end"
        android:maxLines="1"
        android:textAppearance="@style/Text.Regular.40"
        app:layout_constraintBottom_toBottomOf="@id/toBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/toCurrencyIconImageView"
        app:layout_constraintTop_toTopOf="@id/toBackground"
        tools:text="154" />

    <TextView
        android:id="@+id/toCurrencyCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textAppearance="@style/Text.Regular.16_24"
        app:layout_constraintEnd_toEndOf="@id/toCurrencyIconImageView"
        app:layout_constraintStart_toStartOf="@id/toCurrencyIconImageView"
        app:layout_constraintTop_toBottomOf="@id/toCurrencyIconImageView"
        tools:text="RUB" />

    <TextView
        android:id="@+id/fromCurrencyCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textAppearance="@style/Text.Regular.16_24"
        app:layout_constraintEnd_toEndOf="@id/fromCurrencyIconImageView"
        app:layout_constraintStart_toStartOf="@id/fromCurrencyIconImageView"
        app:layout_constraintTop_toBottomOf="@id/fromCurrencyIconImageView"
        tools:text="USD" />

    <TextView
        android:id="@+id/currencyChangeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAppearance="@style/Text.Regular.12_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toBackground"
        tools:text="+2,03 (3,67%) за сегодня" />

    <TextView
        android:id="@+id/currencyCourseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/Text.Regular.12_14.Gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currencyChangeTextView"
        tools:text="1 USD = 125 RUB" />

    <View
        android:id="@+id/fromBackground"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/red_10" />

    <View
        android:id="@+id/toBackground"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fromBackground" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="12dp"
        android:background="@color/text_gray"
        app:layout_constraintBottom_toBottomOf="@id/fromBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="12dp"
        android:background="@color/text_gray"
        app:layout_constraintBottom_toBottomOf="@id/toBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/swapFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/converter_swap_button_content_description"
        android:src="@drawable/ic_swap"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@id/toBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fromBackground" />

    <com.practicum.currencyconverter.ui.views.ToolDotProgress
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bigDotRadius="8"
        app:dotColor="@color/text_gray"
        app:dotCount="3"
        app:dotStep="30"
        app:dotTimeout="250"
        app:layout_constraintBottom_toBottomOf="@+id/currencyCourseTextView"
        app:layout_constraintEnd_toEndOf="@+id/currencyCourseTextView"
        app:layout_constraintStart_toStartOf="@+id/currencyCourseTextView"
        app:layout_constraintTop_toTopOf="@id/currencyCourseTextView"
        app:smallDotRadius="4" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/bg_blue_button"
        android:enabled="false"
        android:text="@string/converter_convert_button_text"
        android:textAppearance="@style/Text.Bold.16_20.White"
        app:layout_constraintBottom_toBottomOf="@id/refreshButton"
        app:layout_constraintEnd_toStartOf="@id/refreshButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/refreshButton" />

</androidx.constraintlayout.widget.ConstraintLayout>